# catalog_review

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
api/routers/: health.py  users.py
api/schemas/: product.py  review.py  user.py
db/: session.py
db/models/: product.py  review.py  user.py
web/app/users/: page.tsx
