[project]
name = "catalogreview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka==0.12.0",
    "fastapi[standard]==0.116.1",
    "opensearch-py==3.0.0",
    "opentelemetry-sdk==1.36.0",
    "pre-commit==4.3.0",
    "redis==6.4.0",
    "sqlalchemy==2.0.43",
    "uvicorn==0.35.0",
]
